--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,14 @@
         <div id="message"></div>
         <div id="imageList"></div>
     </div>
+    
+    <!-- Image Modal -->
+    <div id="imageModal" class="modal">
+        <span class="close-modal">&times;</span>
+        <img class="modal-content" id="modalImage">
+        <div id="modalCaption"></div>
+    </div>
+    
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
